fix alignment Score & Circle

--- a/frontend/src/components/Circle/Circle.scss
+++ b/frontend/src/components/Circle/Circle.scss
@@ -3,13 +3,6 @@
     margin-bottom: 15px;
     margin-top: 15px;
 
-    >svg,
-    .content {
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-
     >svg {
         @extend .circleIntro;
 
